log/build_2022-09-08_22-54-00/cobots_axis_gui/stderr.log
In file included from /home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:2:
/opt/ros/foxy/include/pluginlib/class_list_macros.h:36:2: warning: #warning Including header <pluginlib/class_list_macros.h> is deprecated, include <pluginlib/class_list_macros.hpp> instead. [-Wcpp]
   36 | #warning Including header <pluginlib/class_list_macros.h> is deprecated, \
      |  ^~~~~~~
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp: In member function 'virtual void Cobot7thAxis::saveSettings(qt_gui_cpp::Settings&, qt_gui_cpp::Settings&) const':
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:36:55: warning: unused parameter 'plugin_settings' [-Wunused-parameter]
   36 | void Cobot7thAxis::saveSettings(qt_gui_cpp::Settings& plugin_settings, qt_gui_cpp::Settings& instance_settings) const
      |                                 ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:36:94: warning: unused parameter 'instance_settings' [-Wunused-parameter]
   36 | void Cobot7thAxis::saveSettings(qt_gui_cpp::Settings& plugin_settings, qt_gui_cpp::Settings& instance_settings) const
      |                                                                        ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp: In member function 'virtual void Cobot7thAxis::restoreSettings(const qt_gui_cpp::Settings&, const qt_gui_cpp::Settings&)':
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:41:64: warning: unused parameter 'plugin_settings' [-Wunused-parameter]
   41 | void Cobot7thAxis::restoreSettings(const qt_gui_cpp::Settings& plugin_settings, const qt_gui_cpp::Settings& instance_settings)
      |                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:41:109: warning: unused parameter 'instance_settings' [-Wunused-parameter]
   41 | void Cobot7thAxis::restoreSettings(const qt_gui_cpp::Settings& plugin_settings, const qt_gui_cpp::Settings& instance_settings)
      |                                                                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
In file included from /opt/ros/foxy/include/class_loader/class_loader_core.hpp:57,
                 from /opt/ros/foxy/include/class_loader/class_loader.hpp:55,
                 from /opt/ros/foxy/include/pluginlib/class_list_macros.hpp:40,
                 from /opt/ros/foxy/include/pluginlib/class_list_macros.h:39,
                 from /home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:2:
/opt/ros/foxy/include/class_loader/meta_object.hpp: In instantiation of 'B* class_loader::impl::MetaObject<C, B>::create() const [with C = rqt_plugin::Cobot7thAxis; B = rqt_gui_cpp::Plugin]':
/opt/ros/foxy/include/class_loader/meta_object.hpp:216:7:   required from here
/opt/ros/foxy/include/class_loader/meta_object.hpp:218:12: error: invalid use of incomplete type 'class rqt_plugin::Cobot7thAxis'
  218 |     return new C;
      |            ^~~~~
In file included from /home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:1:
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/include/cobots_axis_gui/cobot_7thaxis.h:20:9: note: forward declaration of 'class rqt_plugin::Cobot7thAxis'
   20 |   class Cobot7thAxis;
      |         ^~~~~~~~~~~~
make[2]: *** [CMakeFiles/cobot_7thaxis.dir/build.make:71: CMakeFiles/cobot_7thaxis.dir/src/cobot_7thaxis.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/cobot_7thaxis.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
